--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^3.10.0",
     "@stripe/stripe-js": "^7.9.0",
+    "@supabase/supabase-js": "^2.39.0",
     "axios": "^1.13.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.395.0",
