Fix Vercel deployment configuration for frontend and backend

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,7 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "api/index.py",
-      "use": "@vercel/python",
-      "config": {
-        "maxLambdaSize": "15mb"
-      }
-    }
-  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "framework": "vite",
   "routes": [
     {
       "src": "/api/(.*)",
@@ -19,6 +12,12 @@
       "dest": "/index.html"
     }
   ],
+  "functions": {
+    "api/index.py": {
+      "runtime": "python3.12",
+      "maxDuration": 10
+    }
+  },
   "env": {
     "ENVIRONMENT": "production"
   }
