--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,4 +1,5 @@
 fastapi>=0.109.0
+uvicorn>=0.27.0
 sqlalchemy>=2.0.25
 pydantic>=2.5.0
 pydantic-settings>=2.1.0
@@ -9,5 +10,10 @@ python-multipart>=0.0.6
 python-dotenv>=1.0.0
 psycopg2-binary>=2.9.9
 stripe>=7.0.0
-supabase>=2.0.0
 httpx>=0.26.0
+# Supabase and its dependencies
+supabase>=2.0.0
+postgrest>=0.10.0
+realtime>=1.0.0
+storage3>=0.5.0
+gotrue>=1.0.0
