--- a/vercel.json
+++ b/vercel.json
@@ -18,6 +18,10 @@
   ],
   "routes": [
     {
+      "src": "/test",
+      "dest": "api/test.py"
+    },
+    {
       "src": "/api/(.*)",
       "dest": "api/index.py",
       "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
