--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,7 +8,4 @@ cmds = ["pip install -r backend/requirements.txt"]
 cmds = ["echo 'Build complete'"]
 
 [start]
-cmd = "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
-
-[start.runImage]
-workDir = "/app/backend"
+cmd = "sh -c 'cd backend && uvicorn app.main:app --host 0.0.0.0 --port $PORT'"
