--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,5 @@
 [phases.setup]
-nixPkgs = ["python312", "postgresql"]
+nixPkgs = ["...", "postgresql"]
 
 [phases.install]
-cmds = ["pip install -r backend/requirements.txt"]
-
-[phases.build]
-cmds = ["echo 'Build complete'"]
-
-[start]
-cmd = "sh -c 'cd backend && uvicorn app.main:app --host 0.0.0.0 --port $PORT'"
+cmds = ["cd backend && pip install -r requirements.txt --no-cache-dir"]
