--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,13 @@
+providers = ["python"]
+
 [phases.setup]
-nixPkgs = ["...", "postgresql"]
+nixPkgs = ["python312", "postgresql"]
 
 [phases.install]
-cmds = ["cd backend && pip install -r requirements.txt --no-cache-dir"]
+cmds = ["cd backend && pip install --no-cache-dir -r requirements.txt"]
+
+[phases.build]
+cmds = ["echo 'Build complete'"]
+
+[start]
+cmd = "cd backend && uvicorn app.main:app --host 0.0.0.0 --port $PORT"
