--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,10 +1,10 @@
 providers = ["python"]
 
 [phases.setup]
-nixPkgs = ["python312", "postgresql"]
+nixPkgs = ["python312Full", "postgresql"]
 
 [phases.install]
-cmds = ["cd backend && pip install --no-cache-dir -r requirements.txt"]
+cmds = ["cd backend && python -m pip install --no-cache-dir -r requirements.txt"]
 
 [phases.build]
 cmds = ["echo 'Build complete'"]
