--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,7 +1,7 @@
 providers = ["python"]
 
 [phases.setup]
-nixPkgs = ["python312Full", "postgresql", "pip"]
+nixPkgs = ["python312Full", "postgresql"]
 
 [phases.install]
 cmds = [
