--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,15 +1,5 @@
-providers = ["python"]
-
-[phases.setup]
-nixPkgs = ["python312Full", "postgresql"]
-
-[phases.install]
-cmds = [
-  "cd backend && python -m pip install --no-cache-dir -r requirements.txt"
-]
-
-[phases.build]
-cmds = ["echo 'Build complete'"]
+# Let Nixpacks auto-detect Python and install from requirements.txt
+# requirements.txt is symlinked from backend/requirements.txt
 
 [start]
 cmd = "cd backend && uvicorn app.main:app --host 0.0.0.0 --port $PORT"
