--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,9 @@
-# Let Nixpacks auto-detect Python and install from requirements.txt
-# requirements.txt is symlinked from backend/requirements.txt
+# Explicit Python configuration
+[phases.setup]
+nixPkgs = ["python312", "postgresql"]
+
+[phases.install]
+cmds = ["python -m venv --copies /opt/venv", ". /opt/venv/bin/activate && pip install -r requirements.txt"]
 
 [start]
-cmd = "cd backend && python -m uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+cmd = ". /opt/venv/bin/activate && cd backend && uvicorn app.main:app --host 0.0.0.0 --port $PORT"
