--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,7 +5,7 @@ providers = ["python"]
 nixPkgs = ["python312", "postgresql"]
 
 [phases.install]
-cmds = ["python -m venv --copies /opt/venv", ". /opt/venv/bin/activate && pip install -r requirements.txt"]
+cmds = ["python -m venv --copies /opt/venv", ". /opt/venv/bin/activate && pip install -r backend/requirements.txt"]
 
 [phases.build]
 cmds = ["echo 'Backend build complete - no build step needed for FastAPI'"]
